# Catch2Test_Example

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
include/: area_of_circle.h
source/: area_of_circle.cpp  main.cpp
tests/source/: test_area_of_circle.cpp  test_equal.cpp  test_less_than_zero.cpp  test_sum.cpp
